# innoextract

./: .gitignore  .mailmap  .travis.yml  BlockReader.cpp  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  ChunkFilter.hpp  Dockerfile  ExeFormat.h  ExeReader.cpp  InnoExtract.cpp  LICENSE  LzmaFilter.cpp  LzmaFilter.hpp  README.md  README.md.in  SetupLoader.cpp  SetupLoaderFormat.h  SetupLoaderFormat.hpp  Types.h  UnDeflate.cpp  Utils.cpp  VERSION  build.sh  env  test.cpp
.github/ISSUE_TEMPLATE/: issue_template.yml
.github/workflows/: ci.yml  codeql.yml  docker-image.yml  robot-tests-copy.yml  robot-tests-with-tags.yml  robot-tests.yml  simple-manual.yml  simple.yml
cmake/: BuildType.cmake  CXX11Check.cmake  CXXVersionCheck.cmake  CompileCheck.cmake  CreateSourceGroups.cmake  Doxygen.cmake  FilterList.cmake  FindLZMA.cmake  Findiconv.cmake  PrintConfiguration.cmake  StyleCheck.cmake  UseStaticLibs.cmake  VersionScript.cmake  VersionString.cmake  check-cxx11-alignof.cpp  check-cxx11-std-codecvt_utf8_utf16.cpp  check-cxx11-std-unique_ptr.cpp  clang-toolchain.cmake  cpplint.py  ekopath-toolchain.cmake  mingw32-toolchain.cmake
cmake/check/: cxx11-std-codecvt_utf8_utf16.cpp  cxx11-std-unique_ptr.cpp
doc/: Doxyfile.in  innoextract.1  innoextract.1.in  update-copyright-years
liblzmadec/: lzmadec.h  main.c  private.h
src/: BitfieldConverter.hpp  BlockReader.cpp  BlockReader.hpp  ChunkFilter.cpp  ChunkFilter.hpp  CustomMessageEntry.cpp  CustomMessageEntry.hpp  Enum.hpp  ExeFormat.hpp  ExeReader.cpp  ExeReader.hpp  Flags.hpp  InnoExtract.cpp  LanguageEntry.cpp  LanguageEntry.hpp  LoadingUtils.cpp  LoadingUtils.hpp  LzmaFilter.cpp  LzmaFilter.hpp  Output.cpp  Output.hpp  PermissionEntry.cpp  PermissionEntry.hpp  SetupComponentEntry.cpp  SetupComponentEntry.hpp  SetupHeader.cpp  SetupHeader.hpp  SetupHeaderFormat.hpp  SetupLoader.cpp  SetupLoader.hpp  SetupLoaderFormat.hpp  SetupTaskEntry.cpp  SetupTaskEntry.hpp  SetupTypeEntry.cpp  SetupTypeEntry.hpp  StoredEnum.hpp  Types.h  Types.hpp  UnDeflate.cpp  Utils.hpp  (+18 more)
src/cli/: debug.cpp  debug.hpp  extract.cpp  extract.hpp  gog.cpp  gog.hpp  goggalaxy.cpp  goggalaxy.hpp  main.cpp  version.cpp.in  version.hpp
src/crypto/: Adler-32.cpp  Adler-32.hpp  CRC32.cpp  CRC32.hpp  Checksum.cpp  Checksum.hpp  Hasher.cpp  Hasher.hpp  IteratedHash.hpp  MD5.cpp  MD5.hpp  SHA-1.cpp  SHA-1.hpp  adler32.cpp  adler32.hpp  arc4.cpp  arc4.hpp  checksum.cpp  checksum.hpp  crc32.cpp  crc32.hpp  hasher.cpp  hasher.hpp  iteratedhash.hpp  md5.cpp  md5.hpp  pbkdf2.cpp  pbkdf2.hpp  sha1.cpp  sha1.hpp  sha256.cpp  sha256.hpp  xchacha20.cpp  xchacha20.hpp
src/html/: index.html
src/html/css/: innoextract.css
src/html/js/: innoextract.misc.js
src/loader/: ExeFormat.hpp  ExeReader.cpp  ExeReader.hpp  SetupLoader.cpp  SetupLoader.hpp  SetupLoaderFormat.hpp  exereader.cpp  exereader.hpp  offsets.cpp  offsets.hpp
src/setup/: CustomMessageEntry.cpp  CustomMessageEntry.hpp  DeleteEntry.cpp  DeleteEntry.hpp  DirectoryEntry.cpp  DirectoryEntry.hpp  FileEntry.cpp  FileEntry.hpp  FileLocationEntry.cpp  FileLocationEntry.hpp  IconEntry.cpp  IconEntry.hpp  IniEntry.cpp  IniEntry.hpp  LanguageEntry.cpp  LanguageEntry.hpp  MessageEntry.cpp  MessageEntry.hpp  PermissionEntry.cpp  PermissionEntry.hpp  RegistryEntry.cpp  RegistryEntry.hpp  RunEntry.cpp  RunEntry.hpp  SetupComponentEntry.cpp  SetupComponentEntry.hpp  SetupCondition.cpp  SetupCondition.hpp  SetupHeader.cpp  SetupHeader.hpp  SetupHeaderFormat.hpp  SetupItem.cpp  SetupItem.hpp  SetupTaskEntry.cpp  SetupTaskEntry.hpp  SetupTypeEntry.cpp  SetupTypeEntry.hpp  Version.cpp  Version.hpp  WindowsVersion.cpp  (+45 more)
src/stream/: BlockFilter.cpp  BlockFilter.hpp  BlockReader.cpp  BlockReader.hpp  ChecksumFilter.hpp  ChunkFilter.cpp  ChunkFilter.hpp  ChunkReader.cpp  ChunkReader.hpp  InstructionFilter.hpp  Lzma1Filter.cpp  Lzma1Filter.hpp  LzmaFilter.cpp  LzmaFilter.hpp  SliceReader.cpp  SliceReader.hpp  block.cpp  block.hpp  checksum.hpp  chunk.cpp  chunk.hpp  exefilter.hpp  file.cpp  file.hpp  lzma.cpp  lzma.hpp  restrict.hpp  slice.cpp  slice.hpp
src/util/: Checksum.cpp  Checksum.hpp  Endian.hpp  Enum.hpp  Flags.hpp  LoadingUtils.cpp  LoadingUtils.hpp  Output.cpp  Output.hpp  StoredEnum.hpp  Types.hpp  Utils.cpp  Utils.hpp  align.hpp  ansi.hpp  boostfs_compat.hpp  color.cpp  color.hpp  console.cpp  console.hpp  debug.cpp  debug.hpp  encoding.cpp  encoding.hpp  endian.hpp  enum.hpp  flags.hpp  fstream.hpp  load.cpp  load.hpp  log.cpp  log.hpp  math.hpp  output.hpp  process.cpp  process.hpp  storedenum.hpp  test.cpp  test.hpp  time.cpp  (+6 more)
src/wasm/: .clang-format  emjs.cpp  emjs.h  extract.cpp  extract.hpp  jsfile.cpp  jsfile.hpp  pre.js
src/wasm/fdzipstream/: ChangeLog  Makefile  Makefile.nmake  README.md  fdzipstream.c  fdzipstream.h  zipexample.c  zipfiles.c
src/wasm/html/: index.html
src/wasm/html/css/: innoextract.css
src/wasm/html/js/: bootstrap-treeview.min.js  innoextract.misc.js
src/wasm/nonzip/: crc32.h  nonzip.cpp  nonzip.h  readme.md
tests/: .gitignore  README.md  conda.yaml  robot.yaml
tests/scripts/: run_post_test.sh  run_tag.sh  run_test.sh
tests/src/page_objects/keywords/: common.robot  home_page.robot  ubuntu.robot  windows.robot
tests/src/page_objects/libraries/: browser_lib.py  custom.py
tests/src/page_objects/locators/: locators.py
tests/src/page_objects/test_data/: test_data.py
tests/src/test_files/: test_files.resource  test_files.yaml
tests/tests/: large_files_tests.robot  multiple_files_tests.robot  smoke_tests.robot  website_footer_tests.robot
utils/: boost_p0.patch  build_deps.sh  utils.sh
